--- a/GesturesPractice/Modal2.xaml
+++ b/GesturesPractice/Modal2.xaml
@@ -7,6 +7,7 @@
             <Image x:Name="img2" Source="https://lh3.googleusercontent.com/FgqdFbUbdi7llj1oUpe-p-zF6px0aiabb3eKjN9U6lXxhQmF94XQRgrdf6KNFcJlHfLZ-Q7c6E31F14S3bdfOkNMzLCiSGGqm3KJ=w600">
                 <Image.GestureRecognizers>
                     <SwipeGestureRecognizer Swiped="OnSwipeGestureRecognizerSwiped" Direction="Down" />
+                    <PinchGestureRecognizer PinchUpdated="OnPinchZoom" />
                 </Image.GestureRecognizers>
             </Image>
             <Label x:Name="txt" Text="Collection Alien Frens" HorizontalOptions="Center" VerticalOptions="Center"/>
