--- a/GesturesPractice/Modal2.xaml
+++ b/GesturesPractice/Modal2.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GesturesPractice.Modal2">
     <ContentPage.Content>
-        <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
-            <Image x:Name="img2" Source="https://lh3.googleusercontent.com/FgqdFbUbdi7llj1oUpe-p-zF6px0aiabb3eKjN9U6lXxhQmF94XQRgrdf6KNFcJlHfLZ-Q7c6E31F14S3bdfOkNMzLCiSGGqm3KJ=w600">
+        <StackLayout VerticalOptions="Center" >
+            <Image x:Name="img2" HeightRequest="300" WidthRequest="300">
                 <Image.GestureRecognizers>
                     <SwipeGestureRecognizer Swiped="OnSwipeGestureRecognizerSwiped" Direction="Down" />
                     <PinchGestureRecognizer PinchUpdated="OnPinchZoom" />
